feat(auth): simulation action role binding rule [PPUC-183]